--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SampleConstraintLayout1">
         <activity
+            android:name=".DaftarActivity"
+            android:parentActivityName=".MainActivity" ></activity>
+
+        <activity
+            android:name=".ActivityHasil"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/label2"></activity>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -18,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
